--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 .env
 .ipynb_checkpoints/Langchain-PgVector-Ingest-checkpoint.ipynb
+data_for_fashion_clip/
+data.zip
+.ipynb_checkpoints/ PostgreSQL and pgvector - Search Engine-checkpoint.ipynb
+.ipynb_checkpoints/Fashion Engine-checkpoint.ipynb
