--- a/docker/backup/v2/docker-compose.yml
+++ b/docker/backup/v2/docker-compose.yml
@@ -11,4 +11,4 @@ services:
       - POSTGRES_PASSWORD=testpwd
       - POSTGRES_HOST_AUTH_METHOD=trust
   #  volumes:
-  #   - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
