--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data_for_fashion_clip/
 data.zip
 .ipynb_checkpoints/ PostgreSQL and pgvector - Search Engine-checkpoint.ipynb
 .ipynb_checkpoints/Fashion Engine-checkpoint.ipynb
+.ipynb_checkpoints/Search Engine - PostgreSQL and pgvector -v5-dot-checkpoint.ipynb
