First version with WatsonX
First version with WatsonX

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-
 .env
-.ipynb_checkpoints/Langchain-PgVector-Ingest-checkpoint.ipynb
 data_for_fashion_clip/
 data.zip
-.ipynb_checkpoints/ PostgreSQL and pgvector - Search Engine-checkpoint.ipynb
-.ipynb_checkpoints/Fashion Engine-checkpoint.ipynb
-.ipynb_checkpoints/Search Engine - PostgreSQL and pgvector -v5-dot-checkpoint.ipynb
+.ipynb_checkpoints/ 
+.chroma/
